--- a/src/app/components/main/user/user.component.html
+++ b/src/app/components/main/user/user.component.html
@@ -1,10 +1,10 @@
 <div class="card shadow" style="width: 300px">
   <div class="card-header">
-    <p class="m-0 text-center text-uppercase">Welcome</p>
+    <p class="m-0 text-center text-uppercase">Home</p>
   </div>
   <div class="card-body">
+    <!--<p class="text-center m-0 p-1">Please sign in!</p>-->
     <p class="text-center border rounded p-1">{{ this.message }}</p>
     <p class="text-center border rounded p-1">{{ this.response }}</p>
-    <button class="btn btn-block btn-sm btn-primary mb-1" (click)="onButton()">{{ !this.isLogged ? 'Sign In' : 'Sign Out' }}</button>
   </div>
 </div>
